[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/objects/TimeButton.gd" type="Script" id=1]
[ext_resource path="res://game/objects/TimeButton2.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/boing.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 10 )

[node name="TimeButton" type="Area2D" groups=[
"time button",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = ExtResource( 2 )

[node name="SpringPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
bus = "SFX"

[node name="ClickPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_TimeButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TimeButton_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
